--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>3.7.4.ALL</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
